fix namespace issues, examples, data documendation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ export(strip_buildings_numbers)
 export(strip_buildings_numbers_in_string)
 export(strip_business_legal_entity_type)
 importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate_at)
 importFrom(magrittr,"%>%")
 importFrom(purrr,when)
+importFrom(rlang,sym)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringr,str_c)
 importFrom(stringr,str_extract_all)
