--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: sabre
 Type: Package
-Title: A set of functions to clean address and business records in flat files.
+Title: A set of functions to clean address and business records in flat files
 Version: 0.1.0
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: Spruce up Addresse and Business REcords
-    Use four spaces when indenting paragraphs within the Description.
+    Use four spaces when indenting paragraphs within the Description
 License: What license is it under?
 Depends:
     R (>= 3.2)
@@ -13,7 +13,10 @@ Imports:
     stringi (>= 1.1.0),
     stringr (>= 1.4.0),
     tidyr (>= 1.1.2),
-    dplyr (>= 1.0.2)
+    dplyr (>= 1.0.2),
+    magrittr (>= 1.5.0),
+    purrr (>= 0.3.0),
+    rlang (>= 0.4.5)
 Suggests:
     covr,
     htmltools,
