--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
+branches:
+    only:
+        - master
+
 language: R
 cache: packages
+
+warnings_are_errors: false
