add set of functions for postcodes (is complete, is partial, is district), add cases to business legal entity regex

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export(find_buildings_numbers_in_string)
 export(find_postcodes)
 export(find_postcodes_in_string)
 export(format_postcode)
+export(is_district)
+export(is_postcode_complete)
+export(is_postcode_partial)
 export(melt_rows)
 export(replace_in_string)
 export(standardize_strings)
