--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(col_diff)
 export(find_buildings_numbers)
+export(find_buildings_numbers_)
 export(find_buildings_numbers_in_string)
 export(find_postcodes)
 export(find_postcodes_in_string)
@@ -27,6 +28,7 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,when)
 importFrom(rlang,":=")
 importFrom(rlang,sym)
+importFrom(stringi,stri_extract_all_regex)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringr,str_c)
 importFrom(stringr,str_extract_all)
