refactor address functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,11 @@ export(melt_rows)
 export(replace_in_string)
 export(standardize_strings)
 export(strip_buildings_numbers)
-export(strip_buildings_numbers_in_string)
+export(strip_buildings_numbers_list)
+export(strip_buildings_numbers_vec)
 export(strip_business_legal_entity_type)
 importFrom(dplyr,across)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,distinct)
 importFrom(dplyr,enquo)
 importFrom(dplyr,filter)
