melt_rows, do not delete empty rows; fix tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(strip_buildings_numbers)
 export(strip_buildings_numbers_list)
 export(strip_buildings_numbers_vec)
 export(strip_business_legal_entity_type)
+export(strip_honorific_title)
 importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,distinct)
