--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: sabre
 Type: Package
 Title: Spruce up Addresse and Business REcords
 Version: 0.1.0
-Author: Who wrote it
+Author: Xavier Gilbert <xavier.gilbert@food.gov.uk>
 Maintainer: Xavier Gilbert <xavier.gilbert@food.gov.uk>
 Description: A set of functions to clean address and business records
     in flat files. The interface tries to consistently use the 'stringi',
