--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,19 @@ __MACOSX
 
 # -- Linux --
 .directory
+
+# -- Byte-compiled / optimized / DLL files --
+__pycache__/
+*.py[cod]
+*$py.class
+
+# -- Jupyter Notebook --
+.ipynb_checkpoints
+
+# -- IPython --
+profile_default/
+ipython_config.py
+
+# -- VSCode --
+.vscode/*
+.history/
