--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(format_postcode)
 export(is_district)
 export(is_postcode_complete)
 export(is_postcode_partial)
+export(is_sector)
 export(melt_rows)
 export(replace_in_string)
 export(standardize_strings)
