add RCpp functions for postcode operations, fix regex for honorific titles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(strip_buildings_numbers_list)
 export(strip_buildings_numbers_vec)
 export(strip_business_legal_entity_type)
 export(strip_honorific_title)
+importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,distinct)
@@ -39,3 +40,4 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
 importFrom(stringr,str_trim)
 importFrom(tidyr,separate_rows)
+useDynLib(sabre)
