--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Imports:
     dplyr (>= 1.0.2),
     magrittr (>= 1.5.0),
     purrr (>= 0.3.0),
-    rlang (>= 0.4.5)
+    rlang (>= 0.4.5),
+    Rcpp
 Suggests:
     covr,
     htmltools,
@@ -33,3 +34,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+LinkingTo: 
+    Rcpp
+
