--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: sabre
 Type: Package
 Title: Spruce up Addresse and Business REcords
 Version: 0.1.1
+Date: 2021-02-06
 Author: Xavier Gilbert <xavier.gilbert@food.gov.uk>
 Maintainer: Xavier Gilbert <xavier.gilbert@food.gov.uk>
 Description: A set of functions to clean address and business records
@@ -19,7 +20,8 @@ Imports:
     dplyr (>= 1.0.2),
     magrittr (>= 1.5.0),
     purrr (>= 0.3.0),
-    rlang (>= 0.4.5)
+    rlang (>= 0.4.5),
+    Rcpp (>= 1.0.6)
 Suggests:
     covr,
     htmltools,
@@ -33,3 +35,4 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+LinkingTo: Rcpp
