--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(is_postcode_complete)
 export(is_postcode_partial)
 export(is_sector)
 export(melt_rows)
+export(parse_nested_records)
 export(replace_in_string)
 export(standardize_strings)
 export(strip_buildings_numbers)
@@ -19,6 +20,7 @@ export(strip_buildings_numbers_list)
 export(strip_buildings_numbers_vec)
 export(strip_business_legal_entity_type)
 export(strip_honorific_title)
+importFrom(Rcpp,evalCpp)
 importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,distinct)
@@ -39,3 +41,4 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_squish)
 importFrom(stringr,str_trim)
 importFrom(tidyr,separate_rows)
+useDynLib(sabre, .registration=TRUE)
