add gapfill_poscodes (RCpp) and modularise str_split_cpp with headers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(find_buildings_numbers)
 export(find_postcodes)
 export(find_postcodes_in_string)
 export(format_postcode)
+export(gapfill_postcodes)
 export(is_district)
 export(is_postcode_complete)
 export(is_postcode_partial)
