fix col_diff for NA in right column creating NA in left: use is.na instead of is.nan; change ifelse to case_when

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(strip_honorific_title)
 importFrom(Rcpp,evalCpp)
 importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
 importFrom(dplyr,enquo)
 importFrom(dplyr,filter)
